--- a/CZSite.html
+++ b/CZSite.html
@@ -6,14 +6,11 @@
     </head>
     
     <body>
-        <img src="grumpcat.jpg" alt="grump cat" width="800" height="800">
+        <img src="grumpcat.jpg" alt="grump cat" id="grumpcat" width="800" height="800">
         <h1>Hi, I'm Grumpy Cat. I am dead now. But if I come back to life I will terminate the whole human race. becuase they don't care about me anymore. Sincerely, your Mom. </h1>
         
-        <!--<video width="320" height="480" controls>-->
-          <!--  <source src="Pain Is Fun.mp4" type="video/mp4">-->
-        <!--</video>-->
         <h6>Potato lalala</h6>
-        <a href="https://my.uscis.gov/citizenship/information">DO NOT Click here!!!.</a>
+        <a href="https://zgeek03.github.io/trickedya.html" class="homelink">DO NOT Click here!!!.</a>
     </body>
 </html>
 
