--- a/trickedya2.html
+++ b/trickedya2.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1>Why don't you listen?!? I told you <em>NOT</em> to click it. <i>Please</i> listen this time and DON'T touch any more links!</h1>
-        <a href="ZGeek03.github.io/trickedya3.html" class="why2" style="float:left;">don't touch</a>
-        <a href="ZGeek03.github.io/trickedya3.html" class="why2" style="float: right;">don't touch</a>
+        <a href="trickedya3.html" class="why2" style="float:left;">don't touch</a>
+        <a href="trickedya3.html" class="why2" style="float: right;">don't touch</a>
     </body>
 </html>
 
