More Major bug fixes

--- a/trickedya2.html
+++ b/trickedya2.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Why don't you listen?!? I told you <em>NOT</em> to click it. <i>Please</i> listen this time and DON'T touch any more links!</h1>
         <a href="https://zgeek03.github.io/trickedya3.html" class="why2" style="float:left;">don't touch</a>
-        <a href="" class="why2" style="float: right;">don't touch</a>
+        <a href="#0" class="why2" style="float: right;">don't touch</a>
     </body>
 </html>
 
