--- a/grumpycatmemorial.html
+++ b/grumpycatmemorial.html
@@ -4,6 +4,7 @@
     <head>
         <title>Grumpy Cat Memorial</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <h1>Well, you made it through all of my security measures, so here it is! The memorial to the best meme cat there ever was, Grumpy Cat! Shall she always be remembered!</h1>
