--- a/trickedya2.html
+++ b/trickedya2.html
@@ -3,6 +3,7 @@
     <head>
         <title>Why?!?</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <h1>Why don't you listen?!? I told you <em>NOT</em> to click it. <i>Please</i> listen this time and DON'T touch any more links!</h1>
