--- a/CZSite.html
+++ b/CZSite.html
@@ -3,6 +3,7 @@
     <head>
         <title>CZ Website</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     
     <body>
