--- a/trickedya.html
+++ b/trickedya.html
@@ -4,6 +4,7 @@
     <head>
         <title>Gotcha!</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <h1 id="why">I told you not to click it!</h1>
