--- a/trickedya3.html
+++ b/trickedya3.html
@@ -4,6 +4,7 @@
     <head>
         <title>Come on...</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <h1>Ya don't give up, do you? Well, I put a password in here now, so you'll never get through. Good luck!  >:) </h1>
