Mobile Site improvements

--- a/grumpycatmemorial.html
+++ b/grumpycatmemorial.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Well, you made it through all of my security measures, so here it is! The memorial to the best meme cat there ever was, Grumpy Cat! Shall she always be remembered!</h1>
-        <img src="grumpcatmemorial.jpg" alt="Grumpy Cat Picture" width="1500" height="844">
+        <img src="grumpcatmemorial.jpg" alt="Grumpy Cat Picture" width="100%">
         <a href="https://www.grumpycats.com/" class="social">Grumpy Cat's Official Website!</a><br>
         <a href="https://en.wikipedia.org/wiki/Grumpy_Cat" class="social">Grumpy Cat Wikipedia page</a><br>
         <a href="https://twitter.com/RealGrumpyCat?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="social">Grumpy Cat Twitter page</a><br>
