--- a/CZSite.html
+++ b/CZSite.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <img src="grumpcat.jpg" alt="grump cat" id="grumpcat" width="800" height="800">
+        <img src="grumpcat.jpg" alt="grump cat" id="grumpcat" width="100%">
         <h1>Hi, I'm Grumpy Cat. I am dead now. But if I come back to life I will terminate the whole human race. becuase they don't care about me anymore. Sincerely, your Mom. </h1>
         
         <h6>Potato lalala</h6>
