UI Improvements and Site Additions
User interface was improved, and the site was made more mobile friendly.
A page on Spongebob Squarepants was created and linked to the home page. A home button was placed on all pages.

--- a/grumpycatmemorial.html
+++ b/grumpycatmemorial.html
@@ -7,13 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <h1>Well, you made it through all of my security measures, so here it is! The memorial to the best meme cat there ever was, Grumpy Cat! Shall she always be remembered!</h1>
+        <a href="zgeek03.github.io/CZSite.html" class="homebutton">Home</a>
+        <h1 class="grump">Well, you made it through all of my security measures, so here it is! The memorial to the best meme cat there ever was, Grumpy Cat! Shall she always be remembered!</h1>
         <img src="grumpcatmemorial.jpg" alt="Grumpy Cat Picture" width="100%">
-        <a href="https://www.grumpycats.com/" class="social">Grumpy Cat's Official Website!</a><br>
-        <a href="https://en.wikipedia.org/wiki/Grumpy_Cat" class="social">Grumpy Cat Wikipedia page</a><br>
-        <a href="https://twitter.com/RealGrumpyCat?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="social">Grumpy Cat Twitter page</a><br>
-        <a href="https://www.facebook.com/TheOfficialGrumpyCat/" class="social">Grumpy Cat Facebook page</a><br>
-        <a href="https://www.instagram.com/realgrumpycat/?hl=en" class="social"> Grumpy Cat Instagram</a><br>
+        <div style="text-align:center"><a href="https://www.grumpycats.com/" class="social">Grumpy Cat's Official Website!</a></div><br>
+        <div style="text-align:center"><a href="https://en.wikipedia.org/wiki/Grumpy_Cat" class="social">Grumpy Cat Wikipedia page</a></div><br>
+        <div style="text-align:center"><a href="https://twitter.com/RealGrumpyCat?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="social">Grumpy Cat Twitter page</a></div><br>
+        <div style="text-align:center"><a href="https://www.facebook.com/TheOfficialGrumpyCat/" class="social">Grumpy Cat Facebook page</a></div><br>
+        <div style="text-align:center"><a href="https://www.instagram.com/realgrumpycat/?hl=en" class="social"> Grumpy Cat Instagram</a></div><br>
         
     </body>
     
