--- a/spongebob.html
+++ b/spongebob.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <a href="zgeek03.github.io/CZSite.html" class="homebutton">Home</a>
+        <a href="CZSite.html" class="homebutton">Home</a>
         <h1 class="spongebob"><i>Long Live Spongebob, the king of the sea!</i></h1>
         <img class="rightpic" src="spongejellyfish.jpg" alt="Spongebob with jellyfish" width="35%">
         <img class="rightpic" src="spongepizza.jpg" alt="Spongebob with squidward holding pizza" width="35%">
