--- a/spongebob.html
+++ b/spongebob.html
@@ -8,9 +8,10 @@
     
     <body>
         <a href="CZSite.html" class="homebutton">Home</a>
-        <h1 class="spongebob"><i>Long Live Spongebob, the king of the sea!</i></h1>
+        <h1 class="spongebob"><i>Long Live Spongebob, the King of the sea! He's an idiot</i></h1>
         <img class="rightpic" src="spongejellyfish.jpg" alt="Spongebob with jellyfish" width="35%">
         <img class="rightpic" src="spongepizza.jpg" alt="Spongebob with squidward holding pizza" width="35%">
         <img class="leftpic" src="spongerip.jpg" alt="Spongebob ripping his pants" width="35%">
         <img class="leftpic" src="spongesing.jpg" alt="Spongebob singing" width="30%">
-    </body>
+   </body>
+    
