--- a/grumpycatmemorial.html
+++ b/grumpycatmemorial.html
@@ -15,7 +15,7 @@
         <div style="text-align:center"><a href="https://twitter.com/RealGrumpyCat?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="social">Grumpy Cat Twitter page</a></div><br>
         <div style="text-align:center"><a href="https://www.facebook.com/TheOfficialGrumpyCat/" class="social">Grumpy Cat Facebook page</a></div><br>
         <div style="text-align:center"><a href="https://www.instagram.com/realgrumpycat/?hl=en" class="social"> Grumpy Cat Instagram</a></div><br>
-       <h1> Hello my name is oscar the one legged and one armed horse. if yoiu or someone you know is diabeetic then don't talk to me aboutt it. Talk to a doctor at hackertyper.net </h1>
+       <h1>Yeyuyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyyeeyyeyeyeyeyeyyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeyeeyyeyeyey </h1>
     </body>
     
 </html>
