--- a/grumpycatmemorial.html
+++ b/grumpycatmemorial.html
@@ -15,7 +15,7 @@
         <div style="text-align:center"><a href="https://twitter.com/RealGrumpyCat?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="social">Grumpy Cat Twitter page</a></div><br>
         <div style="text-align:center"><a href="https://www.facebook.com/TheOfficialGrumpyCat/" class="social">Grumpy Cat Facebook page</a></div><br>
         <div style="text-align:center"><a href="https://www.instagram.com/realgrumpycat/?hl=en" class="social"> Grumpy Cat Instagram</a></div><br>
-       <h1>Corndog </h1>
+       <h1>Corndog Cat </h1>
     </body>
     
 </html>
