--- a/spongebob.html
+++ b/spongebob.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <a href="CZSite.html" class="homebutton">Home</a>
+        <a href="CZSite.html" class="homebutton"><b>Home</b></a>
         <h1 class="spongebob"><i>Long Live Spongebob, the King of the sea! He's an idiot</i></h1>
         
         <object style="width: 820px; height: 461.25px; float: none; clear: both; margin: 2px auto;" data="https://www.youtube.com/watch?v=FKZdL_fOvWY"></object>
