--- a/trickedya.html
+++ b/trickedya.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <a href="CZSite.html" class="homebutton">Home</a>
+        <a href="CZSite.html" class="homebutton"><b>Home</b></a>
         <h1 id="why">I told you not to click it!</h1>
         <h2 id="why">Now, don't do it this time. Don't click the picture. I mean it.</h2>
         <a href="ZGeek03.github.io/trickedya2.html"><img src="grumpcatno.jpg" alt="Grumpy Cat No"></a>
