--- a/trickedya3.html
+++ b/trickedya3.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <a href="CZSite.html" class="homebutton">Home</a>
+        <a href="CZSite.html" class="homebutton"><b>Home</b></a>
         <h1 class="grump">Ya don't give up, do you? Well, I put a password in here now, so you'll never get through. Good luck!  >:) </h1>
         <h6>Hint: cat meme</h6>
         <br>
