--- a/CZSite.html
+++ b/CZSite.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <a href="CZSite.html" class="homebutton">Home</a>
+        <a href="CZSite.html" class="homebutton"><b>Home</b></a>
         <img src="grumpcat.jpg" alt="grump cat" id="grumpcat" width="45%">
         <h1 class="grump">Hi, I'm Grumpy Cat. I am dead now. But if I come back to life I will terminate the whole human race. becuase they don't care about me anymore. Sincerely, your Mom. </h1>
         
