--- a/grumpycatmemorial.html
+++ b/grumpycatmemorial.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <a href="CZSite.html" class="homebutton">Home</a>
+        <a href="CZSite.html" class="homebutton"><b>Home</b></a>
         <h1 class="grump">Well, you made it through all of my security measures, so here it is! The memorial to the best meme cat there ever was, Grumpy Cat! Shall she always be remembered!</h1>
         <img src="grumpcatmemorial.jpg" alt="Grumpy Cat Picture" width="100%">
         <div style="text-align:center"><a href="https://www.grumpycats.com/" class="social">Grumpy Cat's Official Website!</a></div><br>
