--- a/trickedya2.html
+++ b/trickedya2.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <a href="CZSite.html" class="homebutton">Home</a>
+        <a href="CZSite.html" class="homebutton"><b>Home</b></a>
         <h1>Why don't you listen?!? I told you <em>NOT</em> to click it. <i>Please</i> listen this time and DON'T touch any more links!</h1>
         <a href="https://zgeek03.github.io/trickedya3.html" class="why2" style="float:left;">don't touch</a>
         <a href="#0" class="why2" style="float: right;">don't touch</a>
